# subtitleeditor

./: .clang-format  .gitignore  ABOUT-NLS  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  prepare-po.sh
plugins/actions/: Makefile.am
share/: Makefile.am  menubar.xml  org.kitone.subtitleeditor.desktop.in  subtitleeditor.desktop  subtitleeditor.desktop.in
share/appdata/: Makefile.am  subtitleeditor.appdata.xml
share/glade/: Makefile.am  Makefile.in  dialog-character-codings.glade  dialog-check-errors-preferences.glade  dialog-configure-keyboard-shortcuts.glade  dialog-error-checking-preferences.glade  dialog-export-text.glade  dialog-find-and-replace.glade  dialog-import-text.glade  dialog-preferences.glade  dialog-script-properties.glade  dialog-spell-checking.glade  dialog-style-editor.glade  dialog-view-manager.glade  subtitleeditor.glade
share/icons/: Makefile.am
share/metainfo/: Makefile.am  org.kitone.subtitleeditor.appdata.xml  subtitleeditor.appdata.xml
share/ui/: Makefile.am  dialog-character-codings.ui  dialog-encodings-chooser.ui  dialog-export-text.ui  dialog-import-text.ui  dialog-open-document.ui  dialog-save-document.ui  dialog-script-properties.ui  subtitleeditor.ui
src/: ActionSystem.cc  Color.cc  Command.cc  CommandSystem.h  Config.cc  Config.h  Default.h  Document.cc  Document.h  DocumentSystem.cc  DocumentSystem.h  Encodings.cc  Encodings.h  Extension.cc  ExtensionInfo.cc  ExtensionInfo.h  ExtensionManager.cc  FileReader.cc  FileReader.h  FileWriter.cc  FileWriter.h  GtkUtility.cc  Makefile.am  Makefile.in  Options.cc  Options.h  Player.h  Plugin.h  PluginSystem.h  RegEx.cc  ScriptInfo.cc  ScriptInfo.h  Signal.cc  Signal.h  Style.cc  Subtitle.cc  Subtitle.h  SubtitleEditorWindow.cc  SubtitleEditorWindow.h  SubtitleFormat.cc  (+102 more)
src/actions/: About.cc  ChangeFramerate.cc  CheckErrors.h  CombineSubtitles.cc  ConfigureKeyboardShortcuts.cc  DeleteSubtitleSelect.cc  Dialoguize.cc  DocumentManagement.cc  DuplicateSelectedSubtitles.cc  ExternalVideoPlayer.cc  FindAndReplace.cc  JoinDocument.cc  MoveSubtitles.cc  ReverseTextAndTranslation.cc  SpellChecking.cc  SpellChecking.h  StyleEditor.cc  StyleEditor.h  TimeModeManagement.cc  Transcript.cc  VideoPlayerManagement.cc  ViewManager.cc  WaveformEditor.cc  WaveformEditor.h  WaveformManagement.cc  WaveformRenderer.cc  WaveformRenderer.h  WaveformRendererCairo.cc  WaveformRendererGL.cc
src/extension/: Action.cc  Action.h  action.cc  action.h  subtitleformat.h
src/formats/: AdobeEncoreDVD.h  AdvancedSubStationAlpha.h  MPL2.h  MPsub.h  MicroDVD.h  SubRip.h  SubStationAlpha.h  SubViewer2.h  SubtitleASS.cc  SubtitleASS.h  SubtitleEditorProject.cc  SubtitleEditorProject.h  SubtitleEncoreNTSC.cc  SubtitleEncorePAL.cc  SubtitleMPL2.cc  SubtitleMicroDVD.cc  SubtitleSubRip.cc  SubtitleSubRip.h  SubtitleSubViewer2.cc  SubtitleSubViewer2.h  SubtitleTTXT.cc  SubtitleTTXT.h  SubtitleText.cc  SubtitleText.h  SubtitleTimedText.cc  TimedText.h  TimedTextAuthoringFormat1.h
src/gui/: Application.cc  Application.h  CheckErrorsUI.cc  ComboBoxEncoding.cc  ComboBoxEncoding.h  ComboBoxNewLine.cc  ComboBoxSubtitleFormat.cc  ComboBoxSubtitleFormat.h  ComboBoxVideo.cc  DialogCharacterCodings.cc  DialogCharacterCodings.h  DialogFileChooser.cc  DialogFileChooser.h  DialogUtility.cc  DialogUtility.h  GStreamerPlayer.cc  MPlayer.cc  MenuBar.cc  MenuBar.h  Player.cc  PreferencesUI.cc  SpinButtonTime.h  TreeViewExtensionManager.cc  TreeViewExtensionManager.h  VideoPlayer.cc  VideoPlayer.h  WaveformGeneratorUI.cc  WaveformGeneratorUI.h  WaveformSystem.cc  WaveformSystem.h  application.cc  application.h  automaticspellchecker.cc  automaticspellchecker.h  cellrenderercustom.cc  cellrenderercustom.h  checkbuttonwithmemory.cc  checkbuttonwithmemory.h  comboboxencoding.cc  comboboxencoding.h  (+25 more)
src/unittest/: adobe.encore.dvd.ntsc.format  adobe.encore.dvd.ntsc.format.euc-jp  ass.format  ass.format.euc-jp  microdvd.format  mpl2.format  mpl2.format.euc-jp  mpsub.format  mpsub.format.euc-jp  ssa.format  subrip.format  subtitle.editor.project.format  subtitle.editor.project.format.euc-jp  subviewer2.0.format  subviewer2.0.format.euc-jp  testRegEx.cc  testSubtitleLoaders.cc  testSubtitleTime.cc
src/vp/: GStreamerPlayer.cc  GStreamerPlayer.h  VideoPlayer.cc  VideoPlayer.h  gstplayer.cc  gstplayer.h  gstreamerplayer.cc  gstreamerplayer.h  videoplayer.cc  videoplayer.h
src/we/: WaveformEditor.cc  WaveformGenerator.cc  WaveformGenerator.h  WaveformRenderer.cc  WaveformRenderer.h  WaveformRendererCairo.cc  WaveformRendererGL.cc  waveformeditor.cc  waveformeditor.h  waveformgenerator.cc  waveformgenerator.h  waveformrenderer.cc  waveformrenderer.h  waveformrenderercairo.cc  waveformrenderergl.cc
trunk/: ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  config.h.in  configure.ac  configure.in  prepare-ChangeLog.pl  prepare-po.sh
trunk/docs/: Makefile.am  subtitleeditor.1
trunk/m4/: ChangeLog  Makefile.am  Makefile.in  acx_ccache.m4  ax_check_gl.m4  gst_element_check_required.m4  intltool_se_pattern.m4
trunk/plugins/: Makefile.am
trunk/po/: ChangeLog  LINGUAS  POTFILES.in  README.translators  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fr.po  gl.po  hu.po  it.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  sr.po  subtitleeditor.pot  tr.po  zh_CN.po
trunk/share/: Makefile.am  Makefile.in  menubar.xml  subtitleeditor.desktop  subtitleeditor.desktop.in
trunk/src/: Action.cc  Action.h  ActionSystem.h  Color.h  Command.cc  Command.h  CommandSystem.cc  Document.cc  Document.h  DocumentSystem.cc  DocumentSystem.h  Encodings.cc  Encodings.h  Extension.h  ExtensionInfo.cc  ExtensionInfo.h  ExtensionManager.cc  ExtensionManager.h  FileReader.cc  FileReader.h  FileWriter.cc  FileWriter.h  GtkUtility.h  Makefile.am  Options.cc  Options.h  Player.h  Plugin.cc  PluginSystem.cc  RegEx.h  ScriptInfo.cc  Style.cc  Style.h  StyleModel.cc  StyleModel.h  Styles.cc  Styles.h  Subtitle.cc  Subtitle.h  (+94 more)
(+820 files in other folders)
